<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">HealthApp</string>
    <string name="title_activity_home">HealthApp</string>
    <string name="title_activity_food_diary">Food Diary</string>
    <string name="title_activity_food_list">Food List</string>
    <string name="title_activity_diary_add_entry">Add Diary Entry</string>
    <string name="title_activity_meal_details">Meal Details</string>
    <string name="title_activity_register_profile">Create Profile</string>
    <string name="title_activity_food_quantities">Enter ingredient quantities</string>
    <string name="title_activity_add_food">Add Food</string>
    <string name="title_activity_body_stats">Body Statistics</string>

    <string name="foodDiary">Food Diary</string>
    <string name="foodList">Food List</string>
    <string name="addEntry">Add Entry</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="time">Time</string>
    <string name="continueText">Continue</string>
    <string name="ingredients">Ingredients</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="caloriesPer">Calories (per 100g)</string>
    <string name="proteinPer">Protein (per 100g)</string>
    <string name="fatPer">Fat (per 100g)</string>
    <string name="saveFood">Save Food</string>
    <string name="bodystatistics">Body Statistics</string>
    <string name="activityLevel">Activity\nLevel</string>
    <string name="sedentary">Sedentary</string>
    <string name="lightlyActive">Lightly Active</string>
    <string name="moderatelyActive">Moderately Active</string>
    <string name="veryActive">Very Active</string>
    <string name="extremelyActive">Extremely Active</string>
    <string name="pin">PIN</string>
    <string name="confirmPin">Confirm\nPIN</string>
    <string name="confirmPinNoLinebreak">Confirm PIN</string>
    <string name="enterpin">Enter PIN: </string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pin">PinActivity</string>
</resources>
