<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundDark"
    tools:context="com.pts4.healthapp.RegisterProfileActivity">

   <TableLayout
       android:paddingLeft="16dp"
       android:paddingRight="16dp"
       android:paddingTop="16dp"
       android:paddingBottom="16dp"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:stretchColumns="0,1">

       <TableRow>
           <TextView
               style="@style/registerProfileRowTitle"
               android:text="@string/name"/>

           <EditText
               android:id="@+id/profileNameValue"
               style="@style/registerProfileRowEntryField"/>
       </TableRow>

       <TableRow>
           <TextView
               style="@style/registerProfileRowTitle"
               android:text="@string/age"/>

           <EditText
               android:id="@+id/profileAgeValue"
               android:inputType="number"
               style="@style/registerProfileRowEntryField"/>
       </TableRow>

       <TableRow>
           <TextView
               style="@style/registerProfileRowTitle"
               android:text="@string/height"/>

           <EditText
               android:id="@+id/profileHeightValue"
               android:inputType="number"
               style="@style/registerProfileRowEntryField"/>

           <TextView
               style="@style/registerProfileRowTitle"
               android:text="cm"/>
       </TableRow>

       <TableRow>
           <TextView
               style="@style/registerProfileRowTitle"
               android:text="@string/weight"/>

           <EditText
               android:id="@+id/profileWeightValue"
               android:inputType="number"
               style="@style/registerProfileRowEntryField"/>

           <TextView
               style="@style/registerProfileRowTitle"
               android:text="kg"/>
       </TableRow>

       <TableRow>
           <TextView
               style="@style/registerProfileRowTitle"
               android:text="@string/sex"/>

            <RadioGroup
                android:layout_gravity="start">
                <RadioButton
                    android:id="@+id/profileIsMale"
                    style="@style/registerProfileRowRadioButton"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/profileIsFemale"
                    style="@style/registerProfileRowRadioButton"
                    android:text="@string/female"/>
            </RadioGroup>
       </TableRow>

        <TableRow>
            <TextView
                style="@style/registerProfileRowTitle"
                android:text="@string/pin"/>

            <EditText
                android:id="@+id/profilePinValue"
                android:inputType="number"
                android:maxLength="4"
                style="@style/registerProfileRowEntryField"/>
        </TableRow>

       <TableRow>
           <TextView
               style="@style/registerProfileRowTitle"
               android:text="@string/confirmPin"/>

           <EditText
               android:id="@+id/profileConfirmPinValue"
               android:inputType="number"
               android:maxLength="4"
               style="@style/registerProfileRowEntryField"/>
       </TableRow>
       </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">
        <Button
            android:id="@+id/saveProfileButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/addEntryButton"
            android:text="@string/save"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>
