<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pts4.healthapp.AddFoodActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundDark">

    <RelativeLayout
        android:id="@+id/addFoodNameRow"
        style="@style/addFood.Row"
        >

        <TextView
            android:id="@+id/addFoodNameTitle"
            style="@style/addFood.Title"
            android:text="@string/description"
            />

        <EditText
            android:id="@+id/addFoodNameValue"
            style="@style/addFood.Value"
            android:layout_below="@+id/addFoodNameTitle"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addFoodCaloriesRow"
        style="@style/addFood.Row"
        android:layout_below="@+id/addFoodNameRow"
        >

        <TextView
            android:id="@+id/addFoodCaloriesTitle"
            style="@style/addFood.Title"
            android:text="@string/caloriesPer"
            />

        <EditText
            android:id="@+id/addFoodCaloriesValue"
            style="@style/addFood.Value.Numeric"
            android:layout_below="@+id/addFoodCaloriesTitle"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addFoodProteinRow"
        style="@style/addFood.Row"
        android:layout_below="@+id/addFoodCaloriesRow"
        >

        <TextView
            android:id="@+id/addFoodProteinTitle"
            style="@style/addFood.Title"
            android:text="@string/proteinPer"
            />

        <EditText
            android:id="@+id/addFoodProteinValue"
            style="@style/addFood.Value.Numeric"
            android:layout_below="@+id/addFoodProteinTitle"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addFoodFatRow"
        style="@style/addFood.Row"
        android:layout_below="@+id/addFoodProteinRow"
        >

        <TextView
            android:id="@+id/addFoodFatTitle"
            style="@style/addFood.Title"
            android:text="@string/fatPer"
            />

        <EditText
            android:id="@+id/addFoodFatValue"
            style="@style/addFood.Value.Numeric"
            android:layout_below="@+id/addFoodFatTitle"/>
    </RelativeLayout>

    <Button
        android:id="@+id/addFoodConfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/backgroundLight"
        android:text="@string/saveFood"
        />
</RelativeLayout>
